2008-06-06  John W. Eaton  <jwe@octave.org>

	* ov.h (octave_value::erase_subfunctions):
	New function.
	* ov-base.h (octave_base_value::erase_subfunctions):
	New virtual function.
	* ov-usr-fcn.h (octave_user_function::erase_subfunctions):
	New function.
	* symtab.h (symbol_table::fcn_info::::erase_subfunction,
	symbol_table::fcn_info::fcn_info_rep::erase_subfunction,
	symbol_table::erase_subfunctions_in_scope):
	New functions.
	(symbol_table::fcn_info::fcn_info_rep::clear_user_function):
	Erase subfunctions here.

	* variables.cc (Fmlock): Doc fix.

2008-06-05  John W. Eaton  <jwe@octave.org>

	* gl-render.cc (opengl_renderer::draw): Correctly avoid shadow
	warnings from gcc for xmin, xmax, ymin, ymax, zmin, and zmax.

	* graphics/ChangeLog, graphics/Makefile.in, graphics/Makerules.in,
	graphics/fltk_backend/Makefile.in, graphics/opengl/Makefile.in:
	Delete.

	* gl-render.cc, gl-render.h: Move here from src/graphics/opengl.
	* Makefile.in: Add them to the appropriate lists.
	(octave$(EXEEXT)): Also link with $(OPENGL_LIBS)

	* fltk_backend.cc: Move here from src/graphics/fltk_backend.
	* Makefile.in (DLD_XSRC): Add it to the list
	(fltk_backend.oct): Include special rules for linking with
	$(GRAPHICS_LIBS) and $(FT2_LIBS).

	* dynamic-ld.cc (octave_dynamic_loader::mex_mangler,
	octave_dynamic_loader::mex_uscore_mangler,
	octave_dynamic_loader::mex_f77_mangler): New functions.
	(octave_dynamic_loader::do_load_mex): Use them.
	(octave_dynamic_loader::do_remove_oct): Rename from
	octave_dynamic_loader::do_remove.
	(octave_dynamic_loader::do_remove_mex): New function.
	* dynamic-ld.h: Provide/fix decls.

	* graphics.cc (properties::update_normals): Style fixes.
	* graphics.h.in: Style fixes.

	ChangeLog entries for gl-render.h, gl-render.cc, and
	fltk_backend.cc before the move:

	2008-06-05  John W. Eaton  <jwe@octave.org>

	* opengl/gl-render.cc (xmin): New static function.

	* opengl/gl-render.h (opengl_renderer): Style fixes.